--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "skillmap-mvp",
+  "name": "resume-analyzer",
   "version": "1.0.0",
+  "description": "Analyze resumes and recommend jobs based on skills",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
+    "express-fileupload": "^1.4.0",
     "pdf-parse": "^1.1.1",
-    "mammoth": "^1.4.18"
-  }
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "keywords": ["resume", "jobs", "sap", "career"],
+  "author": "Your Name",
+  "license": "MIT"
 }
