--- a/package.json
+++ b/package.json
@@ -2,21 +2,14 @@
   "name": "resume-analyzer",
   "version": "1.0.0",
   "description": "Analyze resumes and recommend jobs based on skills",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "vercel dev",
+    "dev": "vercel dev"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "pdf-parse": "^1.1.1",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "formidable": "^2.1.1",
+    "pdf-parse": "^1.1.1"
   },
   "keywords": ["resume", "jobs", "sap", "career"],
   "author": "Your Name",
