--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "resume-analyzer",
+  "name": "resume-analyzer-server",
   "version": "1.0.0",
-  "description": "Analyze resumes and recommend jobs based on skills",
-  "main": "index.js",
+  "description": "Resume skill analysis and advice server",
+  "main": "server.js",
   "scripts": {
-    "start": "vercel dev",
-    "dev": "vercel dev"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "formidable": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "pdf-parse": "^1.1.1"
-  },
-  "keywords": ["resume", "jobs", "sap", "career"],
-  "author": "Your Name",
-  "license": "MIT"
+  }
 }
